Update README.md
Finalizado el readme para sprint 4