@@ -1,6 +1,7 @@
 # Proyecto Ecommerce Ropa
 
-![Estado del Proyecto](https://img.shields.io/badge/Estado-En%20Desarrollo-yellow)
+![Estado del Proyecto](https://img.shields.io/badge/Estado-En%20Revision-green)
+
 
 Bienvenido/a al repositorio del **Proyecto Ecommerce Ropa**, una plataforma de comercio electrónico especializada en venta de ropa. Este proyecto está desarrollado con tecnologías web básicas (HTML, CSS, JavaScript) y utiliza una base de datos SQL para gestionar la información.
 
@@ -9,8 +10,12 @@ Bienvenido/a al repositorio del **Proyecto Ecommerce Ropa**, una plataforma de c
 ## 📦 Instalación y Configuración
 
 ### Requisitos
-- Cliente de base de datos compatible con SQL (ej: MySQL, PostgreSQL).
+- Cliente de base de datos con XAMMP.
 - Navegador web moderno.
+- IntelliJ
+- JavaSDK
+
+Mas adelante se detallan los pasos para la mayoria de requisitos mencionados
 
 ### Pasos para Configurar el Proyecto
 
@@ -36,14 +41,31 @@ Bienvenido/a al repositorio del **Proyecto Ecommerce Ropa**, una plataforma de c
             1. `create.sql`: Crea las tablas y estructura de la base de datos.
             2. `insert.sql`: Inserta datos iniciales para pruebas.
      9. Ya tendrías la base de datos configurada
-4. **Inicial el programa**  
-   En la carpeta `consultas` encontrarás ejemplos de consultas SQL realizadas por el equipo para validar el funcionamiento de la base de datos.
+4. **Descargar Java SDK**
+   - Si no tienes java sdk instalado o descargado en el equipo en este [link](https://gluonhq.com/products/javafx/) puedes       descargar el sdk necesario para la ejecución.
+   - En este enlace te facilito directamente el link de descarga para: [javaSDK 24.0.1 WINDOWS x64](https://download2.gluonhq.com/openjfx/24.0.1/openjfx-24.0.1_windows-x64_bin-sdk.zip)
+5. **Inicial el programa**
+
+
+   En la carpeta `\Back\scripts\kotlin\Proyecto_Ecommerce` encontraras el entorno de trabajo del proyecto en kotlin
+
+   En la carpeta `\Back\scripts\kotlin\Proyecto_Ecommerce\target` encontraras el jar preparado para su ejecucion
+
+   **Como iniciar el .jar**
+    Desde cmd deberias copiar y pegar este codigo
+   `java --module-path <ruta_del_sdk> --add-modules javafx.controls,javafx.fxml -jar <ruta_absoluta_del_jar>`
+
+
+    Sustituyendo:
+      - <ruta_del_sdk> por la ubicación donde tengas alojado el sdk y especificamente la carpeta /lib quedando algo tal que          como este ejemplo: `"C:\Program Files\Java\javafx-sdk-24.0.1\lib`
+      - <ruta_absoluta_del_jar> por la ubicacion del jar anteriormente mencionada, tomando de ejemplo: `D:\Proyecto_EcommerceRopa\Back\scripts\kotlin\Proyecto_Ecommerce\target\Proyecto_Ecommerce-1.0-SNAPSHOT.jar`
 
 ---
 
 ## 🚀 Uso del Proyecto
 
 - **Frontend**: Navega a la carpeta `Front` y abre los archivos HTML en tu navegador para explorar la interfaz del sitio web.
+- **Backed**: Navega por la carpeta `Back` y realiza los pasos anteriormente mencionados
 - **Funcionalidades Actuales**:
   - Catálogo de productos.
   - Interfaz básica de navegación.
@@ -51,9 +73,6 @@ Bienvenido/a al repositorio del **Proyecto Ecommerce Ropa**, una plataforma de c
   - Conexion a base de datos local
   - Interfaz en JAVAFX
   - LogIng de distintos usuarios
-
----
-
 
 ---
 
